Update for 1.1