@@ -3,19 +3,26 @@ package org.azex.neon.tabcompletions;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
+import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 public class TimespanTab implements TabCompleter {
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String s, @NotNull String[] args) {
+
+        final List<String> validArguments = new ArrayList<>();
+
         if (args.length == 1) {
-            return Collections.singletonList("<number>");
+            StringUtil.copyPartialMatches(args[0], List.of("<number>"), validArguments);
+            return validArguments;
         } else if (args.length == 2) {
-            return List.of("minutes", "seconds");
+            StringUtil.copyPartialMatches(args[1], List.of("minutes", "seconds"), validArguments);
+            return validArguments;
         }
         return Collections.emptyList();
     }
